--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+
+README.md
+README-template.md
+style-guide.md
